# qs_rust

./: .codacy.yml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  crates.js  help.html  index.html  pyproject.toml  settings.html  src-files.js
.github/: copilot-instructions.md  dependabot.yml
docs/: divergences.md  performance.md  performance_comparison.md  python_backend_readiness.md  release_checklist.md  serde_comparison.md
examples/: introduction.rs  options.rs  serde_bridge.rs
fuzz/: Cargo.toml
fuzz/corpus/decode/: charset_and_entities.json  dots_and_bare_segments.json  duplicates_and_limits.json  nested_lists.json  regex_delimiter.json
fuzz/corpus/decode_pairs/: dot_collision.json  list_limit_error.json  root_collision.json  structured_duplicates.json  typed_leaves.json
fuzz/corpus/encode/: bytes_and_latin1.json  comma_nulls.json  dots_and_prefix.json  empty_list_and_sort.json  nested_brackets.json
fuzz/fuzz_targets/: decode.rs  decode_pairs.rs  encode.rs
fuzz/src/: lib.rs
qs_rust/: all.html  enum.Charset.html  enum.DecodeError.html  enum.DecodeKind.html  enum.Delimiter.html  enum.Duplicates.html  enum.EncodeError.html  enum.EncodeFilter.html  enum.EncodeToken.html  enum.FilterResult.html  enum.Format.html  enum.ListFormat.html  enum.SortMode.html  enum.TemporalValue.html  enum.TemporalValueError.html  enum.Value.html  enum.WhitelistSelector.html  fn.decode.html  fn.decode_pairs.html  fn.encode.html  index.html  sidebar-items.js  struct.DateTimeValue.html  struct.DecodeDecoder.html  struct.DecodeOptions.html  struct.EncodeOptions.html  struct.EncodeTokenEncoder.html  struct.FunctionFilter.html  struct.Sorter.html  struct.TemporalSerializer.html  type.Object.html
scripts/: capture_perf_baselines.py  compare_perf_baseline.py  cross_port_perf.py  fuzz_soak.sh  test_capture_perf_baselines.py  test_cross_port_perf.py
search.index/: 0104a30f99f5.js  05d78d37ebd8.js  06e2bbc21eaa.js  0b7a4d99ffa6.js  0c9a0dd498f1.js  0e35bad695ac.js  16a0c982afc3.js  17ba5a7505f7.js  1b850b076c12.js  1c8384dace7b.js  20ae3a8f044e.js  245c05ebf448.js  28dc7267a632.js  28f30791535d.js  2d8aa8b15978.js  30aeff67d812.js  373c2866852f.js  3a637bd1dc32.js  3af8111b163a.js  3b77a306f438.js  411758645985.js  41f98cb3256f.js  4637635cdfd0.js  467e26d038f1.js  48023a0948ba.js  4bb1404d2b2c.js  51576dc09e97.js  555be69a3890.js  57faa3346f5d.js  5bf82328dffd.js  5e79201e5336.js  63e1ecc58678.js  6493493edf10.js  66d596d72fda.js  (+8 more)
(+258 files in other folders)
